@@ -108,6 +108,13 @@ command = "/path/to/program/to/execute". If something is logged in a given secti
 you can automatically launch a program. The log message is passed as the arguments
 to the program. The argv[1] is the date, argv[2] is the program, and argv[3] is the
 actual log message.
+.TP
+.B stamp_fmt
+stamp_fmt = "%b %e %T". Format of the human readable timestamp prepended to all
+log messages. This format string is passed literally to the
+.BR strftime (3)
+function. An empty string is used to disable timestamping (for cases where the
+logger already does its own timestamping).
 .SH "FILES"
 .LP
 Note that the exact paths depend on the build settings.  These are the standard paths.
